--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ system_catalog.xml
 .metadata/.plugins/org.eclipse.team.cvs.core/.running
 .metadata/.plugins/org.eclipse.core.resources/.snap
 .metadata/.plugins/org.eclipse.jdt.junit.core/history
+Mockups/LevelA.bmpr
